Добавил две задачки + отредачил одну

--- a/basic-lua/1 🟢 Фрукты.md
+++ b/basic-lua/1 🟢 Фрукты.md
@@ -1,4 +1,4 @@
-## Описание
+## 📋 Описание
 
 • К вам обратились за помощью два популярных продавца фруктов. Продавцы Sam и Bill. Они приобрели корзинку будущего, где есть две секции. 
 
@@ -16,21 +16,25 @@ local bill_basket = {}
 
 --- 
 
-## Цель
+## 🎯 Цель
 
 > Преобразуйте эти странные "корзинки" вполне в конкретные две таблицы. Структура (какие ключи и значения) в двух таблицах будут отличаться, внимательно читайте описание. В итоге, должны быть две таблицы, в каждой по 10 элементов и они разные по структуре.
 
 --- 
 
-## Условия
+## 📚 Условия
 
 1. Не больше 100 строк кода
 2. Весь код в одном файле 
-3. Названия фруктов чувствительные к регистру (example не равно Example)
+3. Названия фруктов чувствительные к регистру (apple не равно Apple)
 
 --- 
 
-## Подсказки
+## 📂 Подсказки
+
+<details>
+<summary> <i>Показать</i> </summary>
 
 * apple = true
 * 1 = "apple"
+</details>
